# rest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
db/: models.py
schemas/: models.py
tables/: docker-compose.yml  mer
tables/data/postgres/base/16384/: 2619  pg_internal.init
tables/data/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
tables/data/postgres/pg_stat/: db_0.stat  db_16384.stat  global.stat
tables/init/: create.sql
tests/: test_users.py
tmp/: Untitled.ipynb  logic.py  main.py
